fix button alignment on edit menu page

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -406,7 +406,7 @@ input.updatebutton {
   width: 288px;
   text-align: center;
   margin-top: 10px;
-  margin-left: 75px;
+  margin-left: 111px;
 }
 
 input.deletebutton {
@@ -421,5 +421,5 @@ input.deletebutton {
   width: 288px;
   text-align: center;
   margin-top: 10px;
-  margin-left: 75px;
+  margin-left: 111px;
 }
