--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -100,7 +100,7 @@ input#email {
 
 #signupcontainer {
     margin: auto;
-    margin-top: 4vh;
+    margin-top: -1vh;
     width: 28%;
     height: 419px;
     padding: 23px;
